Minor Usability fixes - Fixed z-index issue for columnpicker - Fixed Query Queue issue where the badge was seen for Queued queries - Modified pager sizes

--- a/webroot/css/contrail.custom.css
+++ b/webroot/css/contrail.custom.css
@@ -2750,7 +2750,7 @@ p.error, p.error-text {
 	font-size: 11px;
 }
 
-.ui-multiselect-menu { display:none; position:absolute; z-index:10000; text-align: left }
+.ui-multiselect-menu { display:none; position:absolute; z-index: 12; text-align: left }
 .ui-multiselect-checkboxes { position:relative /* fixes bug in IE6/7 */; overflow-y:scroll }
 .ui-multiselect-checkboxes  input.ace-input[type=checkbox] {  width: 0;  }
 .ui-multiselect-checkboxes label { cursor:default; display:block; border:1px solid transparent; padding:3px 3px 3px 10px }
